# WS3

./: Dockerfile  Procfile  README.md  app.py  btc_analysis.py  fetch_price_data.py  gru_full_dataset.pth  lstm_32core.pth  lstm_optimized.pth  lstm_regularized.pth  lstm_training.py  optimal_trading.py  pyproject.toml  railpack-plan.json  requirements.txt  tumbler (2).py
templates/: index.html
