[build-system]
requires = ["setuptools>=45", "wheel"]

[project]
name = "trading-ml-system"
version = "0.1.0"
description = "Trading ML System - Predict Optimal Positions"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "Flask",
    "pandas",
    "gdown",
    "scikit-learn",
    "numpy",
    "xgboost",
    "lightgbm",
    "plotly",
]

[project.scripts]
app = "app:main"

[tool.railpack]
[tool.railpack.system-packages]
libgomp1 = "*"